Fix content padding, disclaimer fonts size and content x-axis overflow

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -16,9 +16,10 @@
 .Content
   width: 100%
   height: 100%
-  padding: 1vh 4%
+  padding: 1vh 2vw
   outline: rgba(20, 20, 20, 0.17) 1px solid
   overflow-y: auto
+  overflow-x: hidden
 
 
 .More-Info
@@ -51,3 +52,4 @@
 
     .Content
       overflow-y: initial
+      padding: 1vh 4vw
